manpages-fr-extra (20090906) unstable; urgency=low

  [ Nicolas FRANCOIS ]
  * Fix typo in the diff(1) manpage. Closes: #511583
  * Activate the distribution of the sysvinit manpages. No news from the
    sysvinit maintainers.
  * source glibc changed to eglibc.
  * Updated manpages according to current debian packages.
  * Added reiser4progs and reiserfsprogs manpages.

  [ Florentin Duneau ]
  * Fix mistake in mount(8). Closes: #518935
  
 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Mon, 12 Jan 2009 23:36:38 +0100

manpages-fr-extra (20080921) unstable; urgency=low

  [ Nicolas FRANCOIS ]
  * Updated translation of the coreutils manpages.
  * Updated translation of the bash manpages.
  
  [ Cyril Chaboisseau ]
  * Fixed typo in tail(1). Closes: #498147

  [ Sylvain Cherrier ]
  * Updated nfs-utils translation, updated maintainer's name.

  [ Florentin Duneau ]
  * Updated translation of the glibc manpages.
  * Updated translation of the procps manpages.
  * Updated translation of the util-linux manpages.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sun, 21 Sep 2008 17:59:34 +0200

manpages-fr-extra (20080719) unstable; urgency=low

  * Updated to new upstream versions.
  * debian/control: Replace belocs-locales-bin (<< 2.4-3), which used to
    provide translation of the locales-related manpages. Thanks to Frank
    Lichtenheld. Closes: #491251

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sun, 20 Jul 2008 21:24:07 +0200

manpages-fr-extra (20080618) unstable; urgency=low

  [ Nicolas FRANCOIS ]
  * Added addendum for the flock(1), ionice(1) and setarch(8) manpages.
  * Fix the generation of OpenSSL manpages (name and section name).

  [ Lyes ZEMMOUCHE ]
  * Fix in the ionice(1) manpage.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Wed, 18 Jun 2008 21:48:32 +0200

manpages-fr-extra (20080616) unstable; urgency=low

  [ Sylvain Cherrier ]