@@ -7,11 +7,13 @@ manpages-fr-extra (20090906) unstable; urgency=low
   * source glibc changed to eglibc.
   * Updated manpages according to current debian packages.
   * Added reiser4progs and reiserfsprogs manpages.
+  * Translation of updateddb.findutils.1 removed because it may conflict
+    disturb users of mlocate (updateddb.8)
 
   [ Florentin Duneau ]
   * Fix mistake in mount(8). Closes: #518935
   
- -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Mon, 12 Jan 2009 23:36:38 +0100
+ -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Thu, 10 Sep 2009 21:53:53 +0200
 
 manpages-fr-extra (20080921) unstable; urgency=low
 
